--- a/index.html
+++ b/index.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
+<head>
+	<meta charset="utf-8">
+	<title>Девайс - главная</title>
+</head>
+<body>
+	<header class="main-header">
+		<nav class="main-navigation">
+			<a class="main-header-logo">
+				<img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс">
+			</a>
+			<form class="main-header__search">
+				<input class="main-header__search-btn" type="submit" name="find" value="Найти">
+				<input type="search" name="search" placeholder="Поиск по сайту">
+			</form>
+			<ul class="user-navigation">
+				<li class="login-link"><a href="login.html">Войти</a></li>
+				<li class="compare-link"><a href="compare.html">Сравнить</a></li>
+				<li class="cat-link"><a href="cat.html">Корзина</a></li>
+			</ul>
+			<ul class="site-navigation">
+				<li><a href="catalog.html">Каталог товаров</a></li>
+				<li><a href="delivery.html">Доставка</a></li>
+				<li><a href="warranty.html">Гарантия</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main class="container">
+		<h1 class="visually-hidden">магазин "Девайс"</h1>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
-  </body>
+
+		<!-- Выделенное красным не размечаю-->
+		
+
+
+		<section class="main-about">
+			<div class="main-line">
+				<span></span>
+			</div>
+			<h2>О нас</h2>
+			<p class="main-description">
+				Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.<br>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями
+			</p>
+			<ul class="about-services">
+				<li>Деловые Линии</li>
+				<li>Автотрейдинг</li>
+				<li>ЖелДорЭкспедиция</li>
+			</ul>
+			<a class="main-more" href="#">Подробнее о нас</a>
+		</section>
+		<section class="main-contacts">
+			<div class="main-line">
+				<span></span>
+			</div>
+			<h2>Контакты</h2>
+			<p class="main-description">
+				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
+			</p>
+			<a class="main-more" href="#">Напишите нам</a>
+		</section>
+	</main>	
+	<footer class="main-footer">
+		<nav class="main-navigation">
+			<a class="main-footer-logo">
+				<img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс">
+			</a>
+			<p class="footer-contacts">г. Москва, ул. Строителей, 15</p>
+			<ul class="user-navigation">
+				<li class="login-link"><a href="login.html">Войти</a></li>
+				<li class="compare-link"><a href="compare.html">Сравнить</a></li>
+				<li class="cat-link"><a href="cat.html">Корзина</a></li>
+			</ul>
+			<ul class="site-navigation">
+				<li><a href="delivery.html">Доставка</a></li>
+				<li><a href="warranty.html">Гарантия</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+			</ul>
+			<p class="footer-contacts">Тел.: +7 (495) 495-95-95</p>
+		</nav>
+		<div class="footer-line">
+			<span></span>
+		</div>
+		<div class="footer-social">
+			<ul>
+				<li><a class="social-button" href="#">Вконтакте</a></li>
+				<li><a class="social-button" href="#">Фейсбук</a></li>
+				<li><a class="social-button" href="#">Инстаграм</a></li>
+			</ul>
+		</div>
+		<div class="htmlacademy">
+			<span></span>
+		</div>
+	</footer>
+	<!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
+</body>
 </html>
