--- a/catalog.html
+++ b/catalog.html
@@ -5,21 +5,19 @@
 	<title>Девайс - каталог</title>
 </head>
 <body>
-	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="main-header-logo">
-				<img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс">
-			</a>
-			<form class="main-header__search">
-				<input class="main-header__search-btn" type="submit" name="find" value="Найти">
+	<header class="header">
+		<nav class="navigation">
+			<a class="header-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<form class="header-search">
+				<input class="header-search-btn" type="submit" name="find" value="Найти">
 				<input type="search" name="search" placeholder="Поиск по сайту">
 			</form>
-			<ul class="user-navigation">
-				<li class="login-link"><a href="accaunt.html">Валентин Петухов</a></li>
-				<li class="logout-link"><a href="logout.html">Выйти</a></li>
-				<li class="compare-link"><a href="compare.html">Сравнить</a></li>
-				<li class="cat-link"><a href="cat.html">Корзина</a></li>
-			</ul>
+			<div class="user-navigation">
+				<a class="header-login" href="accaunt.html">Валентин Петухов</a>
+				<a class="header-logout" href="logout.html">Выйти</a>
+				<a class="header-compare" href="compare.html">Сравнить</a>
+				<a class="header-cat" href="cat.html">Корзина</a>
+			</div>
 			<ul class="site-navigation">
 				<li><a href="catalog.html">Каталог товаров</a></li>
 				<li><a href="delivery.html">Доставка</a></li>
@@ -27,7 +25,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 		</nav>
-	</header>
+	</header>	
 	<main class="container">
 		<h1>Моноподы для селфи</h1>
 		<ul class="breadcrumbs">
@@ -40,7 +38,7 @@
 			<!-- Выделено красным не размечаю-->
 		</section>
 
-		<section class="filters">
+		<section class="sort">
 			<h2>Сортировка:</h2>
 			<!-- Выделено красным не размечаю-->
 		</section>
@@ -48,70 +46,44 @@
 		<section class="catalog">
 			<h2 class="visually-hidden">Список товаров</h2>
 	        <ul class="catalog-list">
-	          <li class="catalog-item">
-	            <p class="catalog-item-image">
-	              <a href="catalog-item.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Любительская селфи-палка"></a>
-	            </p>	          	
-	            <h3>
-	              <a href="catalog-item.html">
-	              	<span class="catalog-category"><b>Любительская селфи-палка</b></span>
-	              </a>
-	            </h3>
-	            <p class="catalog-item-price">500 руб</p>
+	          <li class="catalog-product">
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Любительская селфи-палка"></a>
+	            <h3><a class="catalog-product-name" href="catalog-product.html">Любительская селфи-палка</a></h3>
+	            <p class="catalog-product-price">500 руб</p>
 	          </li>
-	          <li class="catalog-item">
-	            <p class="catalog-item-image">
-	              <a href="catalog-item.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Профессиональная селфи-палка "></a>
-	            </p>	          	
-	            <h3>
-	              <a href="catalog-item.html">
-	              	<span class="catalog-category"><b>Профессиональная селфи-палка </b></span>
-	              </a>
-	            </h3>
-	            <p class="catalog-item-price">1500 руб</p>
-	          </li>
-	          <li class="catalog-item">
-	            <p class="catalog-item-image">
-	              <a href="catalog-item.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
-	            </p>	          	
-	            <h3>
-	              <a href="catalog-item.html">
-	              	<span class="catalog-category"><b>Непотопляемая селфи-палка</b></span>
-	              </a>
-	            </h3>
-	            <p class="catalog-item-price">2500 руб</p>
-	          </li>
-	          <li class="catalog-item">
-	            <p class="catalog-item-image">
-	              <a href="catalog-item.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»"></a>
-	            </p>	          	
-	            <h3>
-	              <a href="catalog-item.html">
-	              	<span class="catalog-category"><b>Селфи-палка «Следуй за мной»</b></span>
-	              </a>
-	            </h3>
-	            <p class="catalog-item-price">4900 руб</p>
-	          </li>	          	          
+	          <li class="catalog-product">
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Профессиональная селфи-палка"></a>
+	            <h3><a class="catalog-product-name" href="catalog-product.html">Профессиональная селфи-палка</a></h3>
+	            <p class="catalog-product-price">1500 руб</p>
+	          </li>	  
+	          <li class="catalog-product">
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
+	            <h3><a class="catalog-product-name" href="catalog-product.html">Непотопляемая селфи-палка</a></h3>
+	            <p class="catalog-product-price">2500 руб</p>
+	          </li>	  
+	          <li class="catalog-product">
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»"></a>
+	            <h3><a class="catalog-product-name" href="catalog-product.html">Селфи-палка «Следуй за мной»</a></h3>
+	            <p class="catalog-product-price">4900 руб</p>
+	          </li>	    	          	          
 	        </ul>
+			<div class="catalog-pagination">
+				<h2 class="visually-hidden">Пагинация</h2>
+				<!-- Выделено красным не размечаю-->
+			</div>
 		</section>
 
-		<section class="pagination">
-			<h2 class="visually-hidden">Пагинация</h2>
-			<!-- Выделено красным не размечаю-->
-		</section>
 	</main>	
-	<footer class="main-footer">
-		<nav class="main-navigation">
-			<a class="main-footer-logo">
-				<img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс">
-			</a>
+	<footer class="footer">
+		<nav class="navigation">
+			<a class="footer-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
 			<p class="footer-contacts">г. Москва, ул. Строителей, 15</p>
-			<ul class="user-navigation">
-				<li class="login-link"><a href="accaunt.html">Валентин Петухов</a></li>
-				<li class="logout-link"><a href="logout.html">Выйти</a></li>
-				<li class="compare-link"><a href="compare.html">Сравнить</a></li>
-				<li class="cat-link"><a href="cat.html">Корзина</a></li>
-			</ul>
+			<div class="user-navigation">
+				<a class="header-login" href="accaunt.html">Валентин Петухов</a>
+				<a class="header-logout" href="logout.html">Выйти</a>
+				<a class="header-compare" href="compare.html">Сравнить</a>
+				<a class="header-cat" href="cat.html">Корзина</a>
+			</div>
 			<ul class="site-navigation">
 				<li><a href="delivery.html">Доставка</a></li>
 				<li><a href="warranty.html">Гарантия</a></li>
@@ -119,9 +91,6 @@
 			</ul>
 			<p class="footer-contacts">Тел.: +7 (495) 495-95-95</p>
 		</nav>
-		<div class="footer-line">
-			<span></span>
-		</div>
 		<div class="footer-social">
 			<ul>
 				<li><a class="social-button" href="#">Вконтакте</a></li>
@@ -129,9 +98,7 @@
 				<li><a class="social-button" href="#">Инстаграм</a></li>
 			</ul>
 		</div>
-		<div class="htmlacademy">
-			<span></span>
-		</div>
+		<a class="htmlacademy" href="https://htmlacademy.ru">Интерактивные онлайн-курсы HTML Academy</a>
 	</footer>
 	<!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
 </body>
