--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
 	<title>Девайс - главная</title>
 </head>
 <body>
-	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="main-header-logo">
-				<img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс">
-			</a>
-			<form class="main-header__search">
-				<input class="main-header__search-btn" type="submit" name="find" value="Найти">
+	<header class="header">
+		<nav class="navigation">
+			<a class="header-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<form class="header-search">
+				<input class="header-search-btn" type="submit" name="find" value="Найти">
 				<input type="search" name="search" placeholder="Поиск по сайту">
 			</form>
-			<ul class="user-navigation">
-				<li class="login-link"><a href="login.html">Войти</a></li>
-				<li class="compare-link"><a href="compare.html">Сравнить</a></li>
-				<li class="cat-link"><a href="cat.html">Корзина</a></li>
-			</ul>
+			<div class="user-navigation">
+				<a class="header-compare" href="compare.html">Сравнить</a>
+				<a class="header-cat" href="cat.html">Корзина</a>
+				<a class="header-login" href="login.html">Войти</a>
+			</div>
 			<ul class="site-navigation">
 				<li><a href="catalog.html">Каталог товаров</a></li>
 				<li><a href="delivery.html">Доставка</a></li>
@@ -28,7 +26,7 @@
 		</nav>
 	</header>
 	<main class="container">
-		<h1 class="visually-hidden">магазин "Девайс"</h1>
+		<h1 class="visually-hidden">Магазин "Девайс"</h1>
 
 
 
@@ -37,9 +35,6 @@
 
 
 		<section class="main-about">
-			<div class="main-line">
-				<span></span>
-			</div>
 			<h2>О нас</h2>
 			<p class="main-description">
 				Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.<br>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями
@@ -52,9 +47,6 @@
 			<a class="main-more" href="#">Подробнее о нас</a>
 		</section>
 		<section class="main-contacts">
-			<div class="main-line">
-				<span></span>
-			</div>
 			<h2>Контакты</h2>
 			<p class="main-description">
 				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
@@ -62,17 +54,15 @@
 			<a class="main-more" href="#">Напишите нам</a>
 		</section>
 	</main>	
-	<footer class="main-footer">
-		<nav class="main-navigation">
-			<a class="main-footer-logo">
-				<img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс">
-			</a>
-			<p class="footer-contacts">г. Москва, ул. Строителей, 15</p>
-			<ul class="user-navigation">
-				<li class="login-link"><a href="login.html">Войти</a></li>
-				<li class="compare-link"><a href="compare.html">Сравнить</a></li>
-				<li class="cat-link"><a href="cat.html">Корзина</a></li>
-			</ul>
+	<footer class="footer">
+		<nav class="navigation">
+			<a class="footer-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<p class="focontacts">г. Москва, ул. Строителей, 15</p>
+			<div class="user-navigation">
+				<a class="header-compare" href="compare.html">Сравнить</a>
+				<a class="header-cat" href="cat.html">Корзина</a>
+				<a class="header-login" href="login.html">Войти</a>
+			</div>
 			<ul class="site-navigation">
 				<li><a href="delivery.html">Доставка</a></li>
 				<li><a href="warranty.html">Гарантия</a></li>
@@ -80,9 +70,6 @@
 			</ul>
 			<p class="footer-contacts">Тел.: +7 (495) 495-95-95</p>
 		</nav>
-		<div class="footer-line">
-			<span></span>
-		</div>
 		<div class="footer-social">
 			<ul>
 				<li><a class="social-button" href="#">Вконтакте</a></li>
@@ -90,9 +77,7 @@
 				<li><a class="social-button" href="#">Инстаграм</a></li>
 			</ul>
 		</div>
-		<div class="htmlacademy">
-			<span></span>
-		</div>
+		<a class="htmlacademy" href="https://htmlacademy.ru">Интерактивные онлайн-курсы HTML Academy</a>
 	</footer>
 	<!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
 </body>
