--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
 	<header class="header">
 		<nav class="navigation">
-			<a class="header-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<a class="header-logo"><img src="img/logo-device-header.svg" width="163" height="35" alt="Логотип магазина Девайс"></a>
 			<form class="header-search">
 				<input class="header-search-btn" type="submit" name="find" value="Найти">
 				<input type="search" name="search" placeholder="Поиск по сайту">
@@ -31,7 +31,7 @@
 		<ul class="breadcrumbs">
 			<li><a href="">Главная</a></li>
 			<li><a href="">Каталог товаров</a></li>
-			<li><a href="">Моноподы для селфи</a></li>
+			<li>Моноподы для селфи</li>
 		</ul>
 		<section class="filters">
 			<h2>Фильтр:</h2>
@@ -47,22 +47,22 @@
 			<h2 class="visually-hidden">Список товаров</h2>
 	        <ul class="catalog-list">
 	          <li class="catalog-product">
-	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Любительская селфи-палка"></a>
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></a>
 	            <h3><a class="catalog-product-name" href="catalog-product.html">Любительская селфи-палка</a></h3>
 	            <p class="catalog-product-price">500 руб</p>
 	          </li>
 	          <li class="catalog-product">
-	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Профессиональная селфи-палка"></a>
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></a>
 	            <h3><a class="catalog-product-name" href="catalog-product.html">Профессиональная селфи-палка</a></h3>
 	            <p class="catalog-product-price">1500 руб</p>
 	          </li>	  
 	          <li class="catalog-product">
-	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
 	            <h3><a class="catalog-product-name" href="catalog-product.html">Непотопляемая селфи-палка</a></h3>
 	            <p class="catalog-product-price">2500 руб</p>
 	          </li>	  
 	          <li class="catalog-product">
-	            <a class="catalog-product-image" href="catalog-product.html"><img src="http://placehold.it/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»"></a>
+	            <a class="catalog-product-image" href="catalog-product.html"><img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»"></a>
 	            <h3><a class="catalog-product-name" href="catalog-product.html">Селфи-палка «Следуй за мной»</a></h3>
 	            <p class="catalog-product-price">4900 руб</p>
 	          </li>	    	          	          
@@ -76,7 +76,7 @@
 	</main>	
 	<footer class="footer">
 		<nav class="navigation">
-			<a class="footer-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<a class="footer-logo"><img src="img/logo-device-footer.svg" width="163" height="35" alt="Логотип магазина Девайс"></a>
 			<p class="footer-contacts">г. Москва, ул. Строителей, 15</p>
 			<div class="user-navigation">
 				<a class="header-login" href="accaunt.html">Валентин Петухов</a>
