--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<header class="header">
 		<nav class="navigation">
-			<a class="header-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<a class="header-logo"><img src="img/logo-device-header.svg" width="163" height="35" alt="Логотип магазина Девайс"></a>
 			<form class="header-search">
 				<input class="header-search-btn" type="submit" name="find" value="Найти">
 				<input type="search" name="search" placeholder="Поиск по сайту">
@@ -56,7 +56,7 @@
 	</main>	
 	<footer class="footer">
 		<nav class="navigation">
-			<a class="footer-logo"><img src="http://placehold.it/163x35" width="163" height="35" alt="Логотип магазина Девайс"></a>
+			<a class="footer-logo"><img src="img/logo-device-footer.svg" width="163" height="35" alt="Логотип магазина Девайс"></a>
 			<p class="focontacts">г. Москва, ул. Строителей, 15</p>
 			<div class="user-navigation">
 				<a class="header-compare" href="compare.html">Сравнить</a>
