--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
                     <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
                         <input class="search-input" type="search" name="search" id="search" autofocus placeholder="Поиск по сайту">
                         <input class="search-button" type="submit" value="Найти">
-                        <label class="search-label hidden-label" for="search">Поиск по сайту</label>
+                        <label class="search-label" for="search">Поиск по сайту</label>
                     </form>
                 </li>
                 <li>
