--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <ul class="user-navigation-list">
                 <li>
                     <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-                        <input class="search-input" type="search" name="search" id="search" autofocus placeholder="Поиск по сайту">
+                        <input class="search-input" type="search" name="search" id="search" placeholder="Поиск по сайту">
                         <input class="search-button" type="submit" value="Найти">
-                        <label class="search-label hidden-label" for="search">Поиск по сайту</label>
+                        <label class="search-label" for="search">Поиск по сайту</label>
                     </form>
                 </li>
                 <li>
@@ -142,7 +142,7 @@
                     <li class="popular-item">
                         <a class="popular-link" href="catalog-vr.html">
                             <div class="popular-img-container popular-img-container-vr"></div>
-                            <h3 class="popular-title">Виртуальная реальность</h3>
+                            <h3 class="popular-title">Виртуальная <br>реальность</h3>
                         </a>
                     </li>
                     <li class="popular-item">
@@ -303,7 +303,7 @@
                     </li>
                 </ul>
                 <a class="htmlacademy" href="https://htmlacademy.ru">
-                    <span class="visually-hidden">Интерактивные онлайн-курсы HTML Academy</span>
+                    
                 </a>
             </div>
         </div>
